/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.3/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    //id 'application'
    id 'java'
    id "io.freefair.lombok" version "8.2.2"
}


compileJava {
    options.compilerArgs = ['--enable-preview',  '-Xlint:preview' ]
    options.debug = true /// todo
}


repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    mavenLocal() 
}

dependencies {

    // Use JUnit test framework.
    testImplementation 'junit:junit:4.13.2'

    // This dependency is used by the application.
    implementation 'com.google.guava:guava:32.1.1-jre'

    implementation 'io.javalin:javalin:5.6.2'
    implementation 'io.javalin:javalin-rendering:5.6.2'

    implementation 'org.slf4j:slf4j-simple:2.0.7'

    // template engine
    implementation 'gg.jte:jte:3.0.3'
    implementation 'org.thymeleaf:thymeleaf:3.1.2.RELEASE'

    // DI   
    implementation 'com.google.inject:guice:7.0.0'
    implementation 'com.google.inject.extensions:guice-servlet:7.0.0'

    // reflection
    implementation 'org.reflections:reflections:0.10.2'

    // template engine
    // implementation 'gg.jte:jte:3.0.3'
    // implementation 'org.thymeleaf:thymeleaf:3.1.2.RELEASE'
    implementation 'io.pebbletemplates:pebble:3.2.1'

    // serialization
    implementation 'com.google.code.gson:gson:2.10.1'

}

// Apply a specific Java toolchain to ease working on different environments.
java {
    sourceCompatibility = "21"
    targetCompatibility = "21"
    
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

//application {
//    // Define the main class for the application.
//    mainClass = 'mutiitu.blog.Application'
//}



